BJS2-4211: Fix1 after review